# ceinmsrt-plugin-twincatemg-cpp

./: CMakeLists.txt  README.md
VS_2013_project/CEINMS_Twincat/: CEINMS_Twincat.sdf.REMOVED.git-id  CEINMS_Twincat.sdf~origin_Development.REMOVED.git-id  CEINMS_Twincat.sln  CEINMS_Twincat.v12.suo~origin_Development
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/: AdsTalker.sys  CEINMS_Twincat.tsproj  CEINMS_Twincat.tsproj.bak  TrialLicense.tclrs
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/AdsTalker/: AdsTalker.cpp  AdsTalker.h  AdsTalker.rc  AdsTalker.tmc  AdsTalker.vcxproj  AdsTalker.vcxproj.filters  AdsTalkerClassFactory.cpp  AdsTalkerClassFactory.h  AdsTalkerCtrl.cpp  AdsTalkerCtrl.h  AdsTalkerDriver.cpp  AdsTalkerDriver.h  AdsTalkerInterfaces.h  AdsTalkerServices.h  AdsTalkerW32.cpp  AdsTalkerW32.def  AdsTalkerW32.idl  Resource.h
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml  CurrentConfig.xml~origin_Development
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Boot/TwinCAT RT (x64)/CurrentConfig/: AdsTalker.tczip
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Config/IO/: Device 1 (EtherCAT Slave).xti  Device 1 (EtherCAT Slave).xti.bak
VS_2013_project/CEINMS_Twincat/CEINMS_Twincat/_Deployment/TwinCAT RT (x64)/: AdsTalker.pdb.REMOVED.git-id
include/: PluginEMGTwinCat.h
src/: CMakeLists.txt  PluginEMGTwinCat.cpp  PluginEMGTwinCatNoMax.cpp  TestEMGAds.cpp
